--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -1,5 +1,7 @@
+@import '../styles/global.scss';
+
 .search {
-    background-color: #0d1117;
+    background-color: $bg-secnd-color;
     padding: 2rem;
     border-radius: 1rem;
     display: flex;
@@ -10,7 +12,7 @@
     margin-bottom: 1.5rem;
 
     p {
-        color: #525a66;
+        color: $txt-secnd-color;
         font-weight: bold;
     }
 
@@ -19,7 +21,7 @@
         gap: 0.5rem;
 
         button {
-            background-color: #0b4a7d;
+            background-color: $icon-main-color;
             cursor: pointer;
         }
 
@@ -27,7 +29,7 @@
             padding: .6rem;
             border-radius: 3px;
             border: none;
-            color: #0b4a7d;
+            color: $icon-main-color;
         }
     }
 }
