--- a/src/components/User/User.module.scss
+++ b/src/components/User/User.module.scss
@@ -1,5 +1,7 @@
+@import '../styles/global.scss';
+
 .user {
-    background-color: #0d1117;
+    background-color: $bg-secnd-color;
     padding: 2rem;
     border-radius: 1rem;
     display: flex;
@@ -11,7 +13,7 @@
     img {
         width: 140px;
         height: 140px;
-        border: 4px solid #0b4a7d;
+        border: 4px solid $icon-main-color;
         border-radius: 50%;
     }
 
@@ -21,12 +23,12 @@
         gap: 0.4rem;
 
         svg {
-            fill: #4ed8c7;
+            fill: $icon-main-color;
             font-size: 1.5rem;
         }
         
         span {
-            color: #525a66;
+            color: $txt-secnd-color;
             font-weight: bold;
         }
     }
@@ -35,18 +37,19 @@
         display: flex;
 
         div {
+            width: 140px;
             padding: 0 1rem;
             display: flex;
             flex-direction: column;
             gap: .4rem;
 
             &:first-child {
-                border-right: 1px solid #525a66;
+                border-right: 1px solid $txt-secnd-color;
             }
         }
         
         .number {
-            background-color: #4ed8c7;
+            background-color: $icon-secnd-color;
             padding: 0.2rem 0.4rem;
             border-radius: 3px;
         }
@@ -54,10 +57,10 @@
 
     a {
         text-align: center;
-        background-color: #0b4a7d;
-        padding: 1rem;
+        background-color: $icon-main-color;
+        padding: 1rem 4rem;
         border-radius: 5px;
-        opacity: 0.8;
+        opacity: 0.5;
         transition: all 0.3s ease;
 
         &:hover {
