--- a/src/pages/BestProjects/BestProjects.module.scss
+++ b/src/pages/BestProjects/BestProjects.module.scss
@@ -1,3 +1,5 @@
+@import '../../components/styles/global.scss';
+
 .project {
     h2 {
         text-align: center;
@@ -5,7 +7,7 @@
     }
 
     .projectData {
-        background-color: #0d1117;
+        background-color: $bg-secnd-color;
         padding: 2rem;
         border-radius: 1rem;
         display: flex;
@@ -16,12 +18,12 @@
         margin-bottom: 1.5rem;
 
         h3 {
-            color: #525a66;
+            color: $txt-secnd-color;
             font-weight: bold;
         }
 
         a svg {
-            fill: #525a66;
+            fill: $txt-secnd-color;
             border-radius: 50%;
             font-size: 2.5rem;
             transition: all .2s ease;
