Adicionado botão para documentação do repositório. Cor secundária foi alterada.

--- a/src/components/styles/global.scss
+++ b/src/components/styles/global.scss
@@ -8,5 +8,5 @@ $txt-main-color: #fff;
 $txt-secnd-color: #525a66;
 
 //Icons
-$icon-main-color: #0b4a7d;
+$icon-main-color: #1176c9;
 $icon-secnd-color: #4ed8c7;
