--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -30,6 +30,10 @@
             border-radius: 3px;
             border: none;
             color: $icon-main-color;
+
+            &:focus {
+                outline: none;
+            }
         }
     }
 }
