--- a/src/components/User/User.module.scss
+++ b/src/components/User/User.module.scss
@@ -9,12 +9,42 @@
     align-items: center;
     justify-content: center;
     gap: 1.2rem;
+    position: relative;
+
+    .profile {
+        width: fit-content;
+        height: fit-content;
+    }
+
+    .star {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+
+        &:hover {
+            cursor: pointer;
+            animation: spin .5s ease-in-out;
+        }
+    }
+
+    .favorite {
+        fill: $txt-secnd-color;
+    }
+
+    .unfavorite {
+        fill: yellow;
+    }
 
     img {
         width: 140px;
         height: 140px;
         border: 4px solid $icon-main-color;
         border-radius: 50%;
+        transition: all .2s ease;
+
+        &:hover {
+            transform: scale(1.1);
+        }
     }
 
     .location {
@@ -26,7 +56,7 @@
             fill: $icon-main-color;
             font-size: 1.5rem;
         }
-        
+
         span {
             color: $txt-secnd-color;
             font-weight: bold;
@@ -47,7 +77,7 @@
                 border-right: 1px solid $txt-secnd-color;
             }
         }
-        
+
         .number {
             background-color: $icon-secnd-color;
             padding: 0.2rem 0.4rem;
@@ -55,7 +85,7 @@
         }
     }
 
-    a {
+    .repos {
         text-align: center;
         background-color: $icon-main-color;
         padding: 1rem 4rem;
@@ -67,8 +97,5 @@
             opacity: 1;
         }
     }
-    
+
 }
-
-
-
