Usuários favoritos estão sendo exibidos.

--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -10,6 +10,7 @@
     align-items: center;
     gap: 1rem;
     margin-bottom: 1.5rem;
+    min-width: 400px;
 
     p {
         color: $txt-secnd-color;
