--- a/src/components/User/User.module.scss
+++ b/src/components/User/User.module.scss
@@ -10,6 +10,9 @@
     justify-content: center;
     gap: 1.2rem;
     position: relative;
+    max-width: 400px;
+    width: 95%;
+    margin-bottom: 1rem;
 
     .profile {
         width: fit-content;
@@ -44,6 +47,7 @@
 
         &:hover {
             transform: scale(1.1);
+
         }
     }
 
