--- a/src/components/styles/global.scss
+++ b/src/components/styles/global.scss
@@ -11,6 +11,9 @@ $txt-secnd-color: #525a66;
 $icon-main-color: #1176c9;
 $icon-secnd-color: #4ed8c7;
 
+//Radius
+$main-radius: 1rem;
+
 @keyframes spin {
     from {
         transform: rotate(0deg);
