--- a/src/components/FavoritesUsers/FavoriteUsers.module.scss
+++ b/src/components/FavoritesUsers/FavoriteUsers.module.scss
@@ -2,7 +2,22 @@
 
 .favoriteUsers {
     display: flex;
-    align-items: center;
-    justify-content: center;
+    flex-direction: column;
+    text-align: center;
     margin-bottom: 1rem;
+    background-color: $bg-secnd-color;
+    border-radius: $main-radius;
+    width: 400px;
+    padding: 10px 5px;
+
+    h4 {
+        margin: 1rem 0;
+    }
+
+    .usersContainer {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-auto-flow: row;
+        gap: 5px; /* Espaçamento entre os componentes */
+    }
 }
