--- a/src/pages/BestProjects/BestProjects.module.scss
+++ b/src/pages/BestProjects/BestProjects.module.scss
@@ -52,20 +52,26 @@
         }
 
         div {
-            width: 50%;
+            padding: 1rem 0;
+            width: 80%;
             display: flex;
-            align-items: center;
+            align-items: c;
             justify-content: space-around;
 
             a svg {
                 fill: $txt-secnd-color;
-                border-radius: 50%;
-                font-size: 2.5rem;
+                font-size: 1.5rem;
                 transition: all .2s ease;
             }
     
             a svg:hover {
                 transform: scale(1.1);
+            }
+
+            .disableLink {
+                font-size: 1.5rem;
+                fill: rgba(255, 255, 255, 0.07);
+                pointer-events: none;
             }
         }
     }
