Melhorias de responsividade nos componentes Search, User, FavoritesUser e FavoritesRepos.

--- a/src/components/FavoritesUsers/FavoriteUsers.module.scss
+++ b/src/components/FavoritesUsers/FavoriteUsers.module.scss
@@ -21,3 +21,9 @@
         gap: 5px; /* Espaçamento entre os componentes */
     }
 }
+
+@media (max-width: 420px) {
+    .favoriteUsers {
+        width: 99%;
+    }
+}
