--- a/src/components/User/User.module.scss
+++ b/src/components/User/User.module.scss
@@ -22,7 +22,7 @@
     .star {
         position: absolute;
         top: 10px;
-        right: 10px;
+        left: 10px;
 
         &:hover {
             cursor: pointer;
@@ -36,6 +36,13 @@
     
     .unfavorite {
         fill: $txt-secnd-color;
+    }
+
+    .close {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        cursor: pointer;
     }
 
     img {
